# stratumai

./: .env.example  .gitignore  AGENTS.md  COMMIT_MESSAGE.txt  ENTERPRISE_README.md  GETTING_STARTED_REVIEW.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  WARP.md  pyproject.toml  requirements.txt  test_openai.py  validate_bedrock_models.py
.github/workflows/: validate-catalog.yml
api/: README.md  __init__.py  main.py
api/static/: index.html  models.html
catalog/: README.md  models.json  schema.json
chroma_db/: chroma.sqlite3
cli/: stratumai_cli.py
data/: housing-data.md  housing-summary.md  titanic.csv
docs/: API-REFERENCE.md  CACHING-QUICK-REF.md  CACHING.md  CATALOG_MANAGEMENT.md  CONTRIBUTING.md  GETTING-STARTED.md  LangChain_vs_StratifyAI_vs_LLMLite.md  StatifyAI_For_Stakeholders.md  StratumAI-Prompt-Caching.md  TOKEN_LIMIT_QUICK_GUIDE.md  UI-OVERVIEW.md  Why_StratefiAI.md  caching-implementation-summary.md  cli-usage.md  developer-journal.md  frontend-integration.md  large-file-strategies.md  local-installation-guide.md  performance.md  phase4-summary.md  project-status.md  provider-models-catalog.md  quick-start-guide.md  sanity_checks.md  token-limit-quick-guide.md
examples/: auto_selection_demo.py  caching_examples.py  chatbot.py  code_reviewer.py  document_summarizer.py  performance_benchmark.py  rag_example.py  router_example.py  web_server.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  main.ts
frontend/src/lib/api/: client.ts  types.ts  websocket.ts
frontend/src/lib/components/catalog/: CapabilityBadge.svelte  ModelCard.svelte  ModelCatalog.svelte  ModelFilters.svelte
frontend/src/lib/components/chat/: ChatContainer.svelte  ChatHistory.svelte  ChatInput.svelte  ChatMessage.svelte  MarkdownRenderer.svelte  StreamingIndicator.svelte
frontend/src/lib/components/config/: FileUpload.svelte  ModelSelector.svelte  ProviderBadge.svelte  TemperatureSlider.svelte  TokenConfig.svelte
frontend/src/lib/components/dashboard/: CostSummary.svelte
frontend/src/lib/components/layout/: AppShell.svelte  Header.svelte  (+1 more)
frontend/src/lib/stores/: chat.ts  config.ts  cost.ts  file.ts  theme.ts
frontend/src/lib/utils/: format.ts
frontend/src/styles/: _base.scss  _mixins.scss  _reset.scss  _themes.scss  _tokens.scss  main.scss
llm_abstraction/: __init__.py  api_key_helper.py  caching.py  client.py  config.py  embeddings.py  models.py  rag.py  retry.py  router.py  vectordb.py
llm_abstraction/providers/: base.py  bedrock.py  openai.py
llm_abstraction/utils/: __init__.py  json_extractor.py  log_extractor.py  model_selector.py  token_counter.py
logs/: .35b624a37bfe0801585dc2912558c4b2333274c1-audit.json
scripts/: validate_catalog.py
stratifyai/: catalog_manager.py  client.py  config.py
stratifyai/utils/: provider_validator.py
stratumai/: __init__.py  caching.py  chunking.py  client.py  config.py  cost_tracker.py  embeddings.py  exceptions.py  models.py  rag.py  retry.py  router.py  summarization.py
stratumai/chat/: __init__.py  builder.py  stratumai_anthropic.py  stratumai_bedrock.py  stratumai_deepseek.py  stratumai_google.py  stratumai_grok.py  stratumai_groq.py  stratumai_ollama.py  stratumai_openai.py  stratumai_openrouter.py
stratumai/providers/: __init__.py  anthropic.py  base.py  bedrock.py  deepseek.py  google.py  grok.py  groq.py  ollama.py  openai.py  openai_compatible.py  openrouter.py
stratumai/utils/: bedrock_validator.py  code_extractor.py  csv_extractor.py  file_analyzer.py  provider_validator.py  token_counter.py
tests/: test_async_operations.py  test_bedrock_provider.py  test_caching.py  test_chat_builder.py  test_cli_auth_error.py  test_cli_chat.py  test_cli_file_loading.py  test_client.py  test_model_selector.py  test_models.py  test_openai_provider.py  test_phase71.py  test_phase72_extractors.py  test_phase74_caching.py  test_providers_phase2.py  test_router.py  test_router_extraction.py  test_temperature_unit.py  test_temperature_validation.py
(+4 files in other folders)
